--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, 'Arial Narrow', Arial, sans-serif, Cochin, Georgia, Times, 'Times New Roman', serif, Tahoma, Geneva, Verdana, sans-serif, 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Times New Roman', Times, serif;
 }
 
 .container {
@@ -80,59 +80,67 @@ h2 {
 
 
 .loggain {
-          margin-left: 650px;
+          margin-left: 270px;
 }
 
 .reg {
-      margin-left: 650px;
+      margin-left: 250px;
 }
 
 .medlemk {
-          margin-left: 665px;
+          margin-left: 270px;
 }
 
 
 .google {
-         margin-left: 680px;
+         margin-left: 275px;
+         border:gainsboro solid;
+         padding: 8px;
+         width: 10vw;
+         border-radius: 5px;
 }
 
 .apple {
-        margin-left: 680px;
+        margin-left: 275px;
+        border:gainsboro solid;
+        padding: 8px;
+        width: 10vw;
+        border-radius: 5px;
 }
 
 .glömtl {
-         margin-left: 680px;
+         margin-left: 290px;
          color: firebrick;
 }
 
 .komihag {
-          margin-left: 690px;
+          margin-left: 300px;
 }
 
 .personup {
-           margin-left: 640px;
+           margin-left: 250px;
 }
 
 .medlemvilkor {
-               margin-left: 640px;
+               margin-left: 250px;
 }
 
 .emailruta {
-            margin-left: 660px;
+            margin-left: 270px;
             font-size: 15px;
             border-radius: 5px;
             padding: 5px;
 }
 
 .lösenruta {
-            margin-left: 660px;
+            margin-left: 270px;
             font-size: 15px;
             border-radius: 5px;
             padding: 5px;
 }
 
 .fornamnruta {
-              margin-left: 660px;
+              margin-left: 270px;
               font-size: 15px;
               border-radius: 5px;
               padding: 5px;
@@ -158,7 +166,7 @@ h2 {
 }
 
 .alderval {
-           margin-left: 660px;
+           margin-left: 270px;
            width: 200px;
 }
 
@@ -180,8 +188,14 @@ h2 {
 .skickainknapp {
                 font-size: 14px;
                 padding: 8px 18px;
+                margin-left: 300px;
 }
 
+.skickaknapp {
+    font-size: 14px;
+    padding: 8px 18px;
+    margin-left: 300px;
+}
 
 .flirtknapp {
          font-size: 14px;
@@ -207,7 +221,7 @@ h2 {
     padding: 8px 18px;
     color:#fff; 
     background-color:firebrick;
-    margin-left: 700px; 
+    margin-left: 310px; 
 }
 
 .manknapp {
@@ -243,7 +257,7 @@ h2 {
 }
 
 .mankvin {
-          margin-left: 685px;
+          margin-left: 290px;
 }
 
 
@@ -318,8 +332,45 @@ h2 {
                padding: 20px
 }
 
+.preferens {
+    width: 50vw;
+    margin:auto;
+    border:#000 solid 2px;
+    padding: 20px
+}
 
+.regristreras {
+    width: 50vw;
+    margin:auto;
+    border:#000 solid 2px;
+    padding: 10px
+}
 
+.loggs {
+    width: 50vw;
+    margin:auto;
+    border:#000 solid 2px;
+    padding: 20px
+}
+
+.chatta {
+         width: 10vw;
+         margin: auto;
+         border: #000 solid 2px;
+         padding: 10px;
+}
+
+.chattme {
+          margin-left: 560px;
+}
+
+.chattmee {
+           margin-left: 465px;
+}
+
+.chatrubrik {
+             margin-left: 150px;
+}
 
 
 
@@ -383,7 +434,9 @@ footer div{
            text-align:left
 }
 
-
+.skrivtext {
+            color:darkgrey;
+}
 
 
 .footerrubrik{
