--- a/index.css
+++ b/index.css
@@ -323,6 +323,26 @@ h2 {
     width: 240px;
 }
 
+.misha {
+    width: 500px;
+    padding: 10px;
+    float:left;
+}
+
+.benjamin {
+       width: 500px;
+       padding: 30px;
+       float: right;
+}
+
+
+.macce {
+        width: 500px;
+        padding: 30px;
+        float: right;
+}
+
+
 
 
 .berattasidan {
@@ -354,7 +374,7 @@ h2 {
 }
 
 .chatta {
-         width: 10vw;
+         width: 50vw;
          margin: auto;
          border: #000 solid 2px;
          padding: 10px;
