--- a/index.css
+++ b/index.css
@@ -210,6 +210,9 @@ h2 {
          padding: 8px 18px;
 }
 
+.flirtknapp:hover {
+                    background-color: firebrick;
+}
 
 .skickatflirt {
                font-size: 14px;
@@ -224,9 +227,11 @@ h2 {
 .inloggknapp {
     font-size: 14px;
     padding: 8px 18px;
-    color:#fff; 
-    background-color:firebrick;
-    margin-left: 310px; 
+    margin-left: 310px;
+}
+
+.inloggknapp:hover {
+    background-color: firebrick;
 }
 
 .manknapp {
